test/org/midica/testfiles/failing/instruments-with-more-bank-sep.midica
INSTRUMENTS
	1	0 test
	2	0,0 test
	10	0,0/0 test
	12	0,0/0/0 test
	15	0 test
END

1 c /4
